--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Inshallaah"
-      content="TODO"
-    />
+    <meta name="keywords" content="Inshallah, Arabic expression, hope, divine will, cultural significance, faith, optimism, acceptance">
+    <meta name="description" content="Explore the profound meaning of 'Inshallah,' an Arabic expression of hope and faith in divine will. Discover its cultural significance and how it shapes optimism and acceptance in daily life.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Inshallaah</title>
+    <title>Inshallah: Meaning & Significance</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merienda:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
